fix obfuscation issues
imagine reading mixin update notes, this feature is in since 0.8.5

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,10 @@ dependencies {
 
 mixin {
     add sourceSets.main, "mixins.${mod_id}.refmap.json"
+
+    messages {
+        TARGET_VALIDATOR = 'warning'
+    }
 }
 
 fancyGradle {
