add vanilla mixin
and move stuff around

for some reason this only compiles correctly sometimes....

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,8 +25,8 @@ mod_name=EnchantmentControl
 mod_version=indev
 mod_author=["Nischhelm"]
 mod_description=Allows to modify behavior of any enchantment
-mixin_loader_class=enchantmentcontrol.EnchantmentControlPlugin
+mixin_loader_class=enchantmentcontrol.core.EnchantmentControlPlugin
 
 # dependencies
-fermiumbooter_version=968474:6848644
+fermiumbooter_version=968474:7212281
 sme_version=267035:3574478
