--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,5 @@ mixin_loader_class=enchantmentcontrol.core.EnchantmentControlPlugin
 # dependencies
 fermiumbooter_version=968474:7212281
 sme_version=267035:3574478
+crafttweaker_version=MC1120-Main:1.12-4.1.20.709
+zs_version=4.1.20.709
