--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ mixin_extras_version=0.5.0
 # mod
 mod_id=enchantmentcontrol
 mod_name=EnchantmentControl
-mod_version=indev
+mod_version=1.0.0
 mod_author=["Nischhelm"]
 mod_description=Allows to modify behavior of any enchantment
 mixin_loader_class=enchantmentcontrol.core.EnchantmentControlPlugin
