--- a/gradle.properties
+++ b/gradle.properties
@@ -19,12 +19,14 @@ mixin_gradle_version=0.7.+
 mixin_version=0.8.7
 mixin_extras_version=0.5.0
 
+shadow_gradle_version=8.1.1
+
 # mod
 mod_id=enchantmentcontrol
 mod_name=EnchantmentControl
 mod_version=1.0.0
 mod_author=["Nischhelm"]
-mod_description=Allows to modify behavior of any enchantment
+mod_description=Allows modifying behavior of any enchantment
 mixin_loader_class=enchantmentcontrol.core.EnchantmentControlPlugin
 
 # dependencies
